--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-cd DeasProtege.github.io
-echo "Hello World" > index.html
-git add --all
-
-git commit -m "Initial commit"
-
-git push -u origin main
+Thank you for visiting my site!
+It is currently under construction and should be finished in a few weeks!
+2/8/2023
+- Lesley
